# driftwatch

./: .env.example  .gitignore  README.md  docker-compose.yml  smoke_test_driftwatch.py
app/: driftwatch_client.py  main.py
ml_observability_mvp/: .env.example  README.md  pyproject.toml  schema.sql
ml_observability_mvp/cli/: report.py
ml_observability_mvp/examples/: demo_inference.py
ml_observability_mvp/jobs/: compute_daily_metrics.py
ml_observability_mvp/sdk/: __init__.py  client.py
